Working on getting world time

--- a/crates/ya-world-time-sync/Cargo.toml
+++ b/crates/ya-world-time-sync/Cargo.toml
@@ -10,3 +10,7 @@ license.workspace = true
 ya-world-time = { path = "../.." }
 env_logger = { workspace = true }
 tokio = { workspace = true, features = ["rt", "macros", "net"] }
+sntpc = { workspace = true, features = ["utils"] }
+log = { workspace = true }
+chrono = { workspace = true}
+winapi = { workspace = true }
