--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ log = "0.4.17"
 sntpc = "0.3.2"
 tokio = "1.26.0"
 env_logger = "0.10.0"
+winapi = "0.3.9"
 
 [dependencies]
 chrono = { workspace = true }
