--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ sntpc = "0.3.2"
 tokio = "1.26.0"
 env_logger = "0.10.0"
 winapi = "0.3.9"
+dns-lookup = "1.0.8"
 
 [dependencies]
 chrono = { workspace = true }
 log = { workspace = true }
 sntpc = { workspace = true }
-tokio = { workspace = true, features = ["net"] }
+dns-lookup = {workspace = true}
