Working on cross platform implentation

--- a/crates/ya-world-time-sync/Cargo.toml
+++ b/crates/ya-world-time-sync/Cargo.toml
@@ -14,3 +14,4 @@ sntpc = { workspace = true, features = ["utils"] }
 log = { workspace = true }
 chrono = { workspace = true}
 winapi = { workspace = true }
+libc = { workspace = true }
