--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tokio = "1.26.0"
 env_logger = "0.10.0"
 winapi = "0.3.9"
 dns-lookup = "1.0.8"
+libc = "0.2.101"
 
 [dependencies]
 chrono = { workspace = true }
